2013-03-13  Dmitry Antipov  <dmantipov@yandex.ru>

	* xdisp.c (init_iterator): Simplify because both character and byte
	positions are either specified or -1.  Add eassert.  Adjust comment.
	* window.c (Fscroll_other_window): Use SET_PT_BOTH because both
	character and byte positions can be obtained from marker.

2013-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	Static checking by Sun C 5.12.
	* alloc.c (buffer_memory_full) [REL_ALLOC]:
	* bytecode.c (exec_byte_code):
	* dispnew.c (init_display):
	* eval.c (error):
	* fileio.c (Fsubstitute_in_file_name):
	* keyboard.c (Fevent_convert_list):
	* keymap.c (Fsingle_key_description):
	* term.c (maybe_fatal, fatal):
	* xfns.c (Fx_display_backing_store, Fx_display_visual_class):
	* xsmfns.c (Fhandle_save_session):
	Omit unreachable code.
	* keymap.c (map_keymap_char_table_item): Cast void * to
	a function pointer type; the C Standard requires this.

	* sysdep.c: Remove a use of BSD_SYSTEM, which I'm trying to phase out.
	Include <sys/param.h> unconditionally, as that works elsewhere and
	is simpler here.  Include <sys/sysctl.h> if DARWIN_OS ||
	__FreeBSD__, not if BSD_SYSTEM, since it's needed only for Darwin
	and FreeBSD now.

2013-03-11  Paul Eggert  <eggert@cs.ucla.edu>

	* insdel.c (adjust_after_replace): Use bool for boolean.

2013-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c: Move keyboard decoding to read_key_sequence.
	(decode_keyboard_code): Remove.
	(tty_read_avail_input): Don't try to decode input.
	(read_decoded_char): New function.
	(read_key_sequence): Use it.

2013-03-10  Daniel Colascione  <dancol@dancol.org>

	* w32term.h (GUISTR, GUI_ENCODE_FILE, GUI_ENCODE_SYSTEM, GUI_FN)
	(GUI_SDATA, guichar_t): Macros to abstract out differences between
	NTGUI_UNICODE and !NTGUI_UNICODE builds, some moved out of
	w32fns.c.

	* w32term.c (construct_drag_n_drop): Use the above macros to make
	drag-and-drop work for non-ASCII filenames in cygw32 builds.
